<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="add_account">Добавить счет</string>
	<string name="balance">Баланс</string>
	<string name="account_dots">● ● ● ●</string>
	<string name="colorTitle">Выбранный цвет</string>
	<string name="choose_color">Выбрать цвет</string>
	<string name="check_color">Проверить цвет</string>
	<string name="last_digits">Последние 4 цифры карты</string>
	<string name="cardName">Название счета</string>
	<string name="isAccountShared">Совместный счет</string>
	<string name="save">Сохранить</string>
	<string name="empty_value">Поле не должно быть пустым</string>
	<string name="users">Приглашенные пользователи</string>
	<string name="plus_sign">+</string>
	<string name="add">Добавить</string>
	<string name="planning_fragment_name">Планирование</string>
	<string name="your_accounts">Счета</string>
	<string name="categories">Категории</string>
	<string name="earnings">Доход</string>
	<string name="progress">Ваш прогресс</string>
	<string name="addGoal">Добавить цель на период</string>
	<string name="are_you_sure">Вы уверены?</string>
	<string name="delete_goal">Вы удалите цель на данный месяц</string>
	<string name="total_sum">Итоговая сумма</string>
	<string name="delete">Удалить</string>
	<string name="earning">Доходы</string>
	<string name="profile_fragment_name">Профиль</string>
	<string name="exit">Выход</string>
	<string name="email">Email</string>
	<string name="timeCreation">Вы с нами с</string>
	<string name="accounts">Ваши счета</string>
	<string name="spendLabel">Категории трат</string>
	<string name="earnLabel">Категории дохода</string>
	<string name="confirm_dialog">Удалить категорию?</string>
	<string name="ok">Да</string>
	<string name="cancel">Отмена</string>
	<string name="if_deleted">При удалении категории </string>
	<string name="if_deleted_after">данные об этой категории будут утрачены</string>
	<string name="logout_message">Данные о локальных операциях/счетах/категориях останутся в памяти устройства.</string>
	<string name="logout_message_after">Удалить их!</string>
	<string name="logout_title">Выйти из аккаунта?</string>
	<string name="news">Популярные новости</string>
</resources>