<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<com.google.android.material.appbar.AppBarLayout
			android:id="@+id/topAppBarLayout"
			android:layout_width="match_parent"
			android:layout_height="@dimen/height_65"
			app:layout_constraintTop_toTopOf="parent">

			<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent">

				<com.google.android.material.textview.MaterialTextView
					android:id="@+id/screenName"
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:layout_marginStart="@dimen/spacing_15"
					android:gravity="center"
					android:text="@string/profile_fragment_name"
					style="@style/TextAppearance.Material3.HeadlineLarge"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent" />

				<androidx.appcompat.widget.AppCompatImageView
					android:id="@+id/settings_button"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginEnd="@dimen/spacing_20"
					android:src="@drawable/ic_settings"
					android:tint="?colorPrimary"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toStartOf="@id/exitButton"
					app:layout_constraintTop_toTopOf="parent" />

				<androidx.appcompat.widget.AppCompatImageView
					android:id="@+id/exitButton"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginEnd="@dimen/spacing_20"
					android:tint="?attr/colorError"
					android:src="@drawable/ic_exit"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toTopOf="parent" />


			</androidx.constraintlayout.widget.ConstraintLayout>
		</com.google.android.material.appbar.AppBarLayout>

		<LinearLayout
			android:id="@+id/layout_email"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="@dimen/spacing_10"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/topAppBarLayout">


			<com.google.android.material.textview.MaterialTextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="top"
				android:text="@string/email"
				android:textStyle="bold" />

			<com.google.android.material.textview.MaterialTextView
				android:id="@+id/textViewEmail"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toEndOf="@id/textViewEmail"
				app:layout_constraintTop_toTopOf="@id/textViewEmail" />
		</LinearLayout>

		<LinearLayout
			android:id="@+id/layout_time"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="@dimen/spacing_10"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/layout_email">

			<com.google.android.material.textview.MaterialTextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/timeCreation"
				android:textStyle="bold" />

			<com.google.android.material.textview.MaterialTextView
				android:id="@+id/textViewCreationTime"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toEndOf="@id/textViewEmail"
				app:layout_constraintTop_toTopOf="@id/textViewEmail" />
		</LinearLayout>

		<com.google.android.material.textview.MaterialTextView
			android:id="@+id/newsLabel"
			android:layout_width="match_parent"
			style="@style/TextAppearance.Material3.TitleLarge"
			android:layout_height="wrap_content"
			android:padding="@dimen/spacing_10"
			android:text="@string/news"
			app:layout_constraintTop_toBottomOf="@id/layout_time" />

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/recycler_news"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toBottomOf="@id/newsLabel"
			tools:itemCount="1"
			tools:listitem="@layout/news_item" />

		<com.google.android.material.textview.MaterialTextView
			android:id="@+id/accountLabel"
			android:layout_width="match_parent"
			style="@style/TextAppearance.Material3.TitleLarge"
			android:layout_height="wrap_content"
			android:padding="@dimen/spacing_10"
			android:text="@string/accounts"
			app:layout_constraintTop_toBottomOf="@id/recycler_news" />

		<androidx.viewpager2.widget.ViewPager2
			android:id="@+id/accountViewPager"
			android:layout_width="match_parent"
			android:layout_height="120dp"
			android:clipToPadding="false"
			app:layout_constraintTop_toBottomOf="@id/accountLabel" />

		<com.google.android.material.textview.MaterialTextView
			android:id="@+id/spendLabel"
			style="@style/TextAppearance.Material3.TitleLarge"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="@dimen/spacing_10"
			android:text="@string/spendLabel"
			app:layout_constraintTop_toBottomOf="@id/accountViewPager" />

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/rv_categories_spend"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="2"
			android:background="?attr/colorTertiary"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/spendLabel" />

		<com.google.android.material.textview.MaterialTextView
			android:id="@+id/earnLabel"
			style="@style/TextAppearance.Material3.TitleLarge"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="@dimen/spacing_10"
			android:text="@string/earnLabel"
			app:layout_constraintTop_toBottomOf="@id/rv_categories_spend" />

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/rv_categories_earning"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="2"
			android:background="?attr/colorTertiary"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/earnLabel" />

	</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>