<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	app:cardCornerRadius="@dimen/spacing_10"
	tools:backgroundTint="@color/neutral_1">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:padding="@dimen/spacing_20">

		<com.google.android.material.textview.MaterialTextView
			android:id="@+id/accountName"
			style="@style/TitleMedium"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:fontFamily="@font/poppinsbold"
			android:textColor="@color/neutral_6"
			app:layout_constraintBottom_toTopOf="@id/balanceTitle"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:text="@string/save" />

		<com.google.android.material.textview.MaterialTextView
			android:id="@+id/numberTitle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginEnd="@dimen/spacing_20"
			android:layout_marginStart="@dimen/spacing_10"
			android:text="@string/account_dots"
			android:textColor="@color/neutral_6"
			app:layout_constraintBottom_toBottomOf="@id/number"
			app:layout_constraintEnd_toStartOf="@id/number"
			app:layout_constraintTop_toTopOf="@id/number" />

		<com.google.android.material.textview.MaterialTextView
			android:id="@+id/number"
			style="@style/Body2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/spacing_10"
			android:textColor="@color/neutral_6"
			app:layout_constraintBottom_toBottomOf="@id/accountName"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="@id/accountName"
			tools:text="@string/save" />

		<com.google.android.material.textview.MaterialTextView
			android:id="@+id/balanceTitle"
			style="@style/Body1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/balance"
			android:textColor="@color/neutral_6"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toStartOf="@id/balanceTitle"
			app:layout_constraintTop_toBottomOf="@id/accountName"
			tools:text="@string/save" />

		<com.google.android.material.textview.MaterialTextView
			android:id="@+id/balance"
			style="@style/Body1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/spacing_10"
			android:textColor="@color/neutral_6"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@id/accountName"
			tools:text="@string/save" />
	</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
